@@ -10,6 +10,7 @@ Bugs fixed:
 - 2028194 Failure in generating indication
 - 2027392 Bug in Query processing
 - 2158198 syslog call incorrect
+- 2164750 sfcb does not handle some malformed HTTP requests correctly
 
 Changes in 1.3.2
 ================
